# winlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  catalog.xml  win-main.cpp  winlib-schema.xsd  winlib-template.vstemplate  winlib.vstemplate
lib/: CMakeLists.txt  winlib.h
lib/componentlib/: CMakeLists.txt  generator.cpp  mappings.txt  pch.h  string_output.h  test.cpp  test.xml
lib/componentlib/bindings/: _label.cpp  _label.h
lib/componentlib/generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  mappings.txt  parser.cpp  parser.h  types.h  utils.h  validator.h  xml_char_map.h  xsd_schema.h
lib/componentlib/include/comp/: button.h  button.xml  label.h  label.xml  text_box.h  text_box.xml  ui_element.h  ui_manager.h  window.h
lib/componentlib/include/comp/file_tree/: file_treeview_item.h
lib/componentlib/include/comp/treeview/: treeview.h
lib/componentlib/src/: button.cpp  file_treeview.cpp  file_treeview_item.cpp  label.cpp  treeview.cpp  treeview_item.cpp  window.cpp
lib/controllib/: CMakeLists.txt  pch.h
lib/controllib/include/ctrl/: button.h  label.h  window.h
lib/controllib/include/ctrl/file_tree/: file_treeview.h  file_treeview_item_directory.h  file_treeview_item_file.h
lib/controllib/include/ctrl/treeview/: treeview_item.h
lib/controllib/src/: button.cpp  file_treeview.cpp  file_treeview_item.cpp  label.cpp  treeview.cpp  treeview_item.cpp  window.cpp
lib/nativelib/: CMakeLists.txt  pch.h
lib/nativelib/include/natlib/: color.h  gdi.h  icon.h  image.h  image_list.h  rect.h  size.h
lib/nativelib/include/natlib/base/: base_control.h  base_window.h  control.h  events.h  ihandle.h
lib/nativelib/include/natlib/events/: event.h  event_dispatcher.h  event_observer.h
lib/nativelib/include/natlib/utils/: macros.h  utils.h
lib/nativelib/src/: base_control.cpp  base_window.cpp  control.cpp  event_dispatcher.cpp  icon.cpp  image_list.cpp
lib/utilitylib/: CMakeLists.txt  pch.h
lib/utilitylib/include/util/: directory.h  file.h  filesystem_entry.h
